# watch_hrm_analysis

./: .gitignore  data_struct_notes.txt  input.xml  mainxml.hs
xml_test_app/: CHANGELOG.md  xmltestapp.cabal
xml_test_app/app/: Main.hs  StringOp.hs  Support.hs  TimeParsOp.hs
