cabal-version:      2.4
name:               xmltestapp
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             arachnothrone
maintainer:         arachnothrone@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable xmltestapp
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0, 
        haskell-say ^>=1.0.0.0,
        xml-conduit ^>=1.9.0.0,
        xml-hamlet ^>=0.5.0.2,
        containers ^>=0.6.5.1, 
        text ^>= 1.2.4.1
    hs-source-dirs:   app
    default-language: Haskell2010
